# BullsAndCows

BullsAndCows/: CMakeLists.txt  Records.txt  bullsandcows.cpp  bullsandcows.h  bullsandcows.ui  congratulationswindow.cpp  congratulationswindow.h  congratulationswindow.ui  main.cpp  recordstable.cpp  recordstable.h  recordstable.ui
build-BullsAndCows-Desktop_Qt_6_5_0_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  Records.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-BullsAndCows-Desktop_Qt_6_5_0_MinGW_64_bit-Release/.cmake/api/v1/reply/: cache-v2-8313aea573300335309a.json  cmakeFiles-v1-9bda575e66b781b79ff2.json  codemodel-v2-d3716b8661c24e431dd7.json  directory-.-Release-6d80f4066926a7415cb3.json  index-2023-05-13T16-55-47-0041.json  target-BullsAndCows-Release-af65049b6b99806c73a3.json  target-BullsAndCows_autogen-Release-617b61eb173ba7fa84b2.json  target-BullsAndCows_autogen_timestamp_deps-Release-cd1eae5e8c2a8844d406.json
build-BullsAndCows-Desktop_Qt_6_5_0_MinGW_64_bit-Release/.qt/: QtDeploySupport.cmake
build-BullsAndCows-Desktop_Qt_6_5_0_MinGW_64_bit-Release/.qtc_clangd/: compile_commands.json
build-BullsAndCows-Desktop_Qt_6_5_0_MinGW_64_bit-Release/.qtc_clangd/.cache/clangd/index/: bullsandcows.cpp.2FE96053DBAAEC47.idx  bullsandcows.h.2FAA4D3E798D0D5C.idx  congratulationswindow.cpp.185BF6A7A65299DC.idx  congratulationswindow.h.338E4725E61A2F3F.idx  main.cpp.8CB3D60EFDAAB74E.idx  qflags.h.E647272E9F4740E9.idx  qmainwindow.h.E1B51044FF0FE885.idx  qnativeinterface.h.7D43FA5033ABEED6.idx  (+6 more)
build-BullsAndCows-Desktop_Qt_6_5_0_MinGW_64_bit-Release/BullsAndCows_autogen/: deps  mocs_compilation.cpp
build-BullsAndCows-Desktop_Qt_6_5_0_MinGW_64_bit-Release/BullsAndCows_autogen/EWIEGA46WW/: moc_bullsandcows.cpp  moc_bullsandcows.cpp.d  moc_congratulationswindow.cpp  moc_congratulationswindow.cpp.d  moc_recordstable.cpp  moc_recordstable.cpp.d
build-BullsAndCows-Desktop_Qt_6_5_0_MinGW_64_bit-Release/BullsAndCows_autogen/include/: ui_bullsandcows.h  ui_congratulationswindow.h  ui_recordstable.h
